Infra/k8s/manifests/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-integrador
  namespace: integrador
spec:
  type: ClusterIP
  selector: { app: redis-integrador }
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-integrador
  namespace: integrador
spec:
  replicas: 1
  selector: { matchLabels: { app: redis-integrador } }
  template:
    metadata: { labels: { app: redis-integrador } }
    spec:
      containers:
        - name: redis
          image: redis:7
          ports: [{ containerPort: 6379 }]
