Infra/k8s/manifests/coordinador.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coordinator
  namespace: integrador
  labels:
    app: coordinator
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: coordinator
  template:
    metadata:
      labels:
        app: coordinator
    spec:
      serviceAccountName: coordinator-ksa
      containers:
        - name: coordinator
          image: docker.io/facundootero/coordinator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: coordinador-integrador
  namespace: integrador
  spec:
  type: ClusterIP
  selector:
    app: coordinator   # ← ahora sí matchea con el Deployment
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinador
  namespace: integrador
  annotations:
    kubernetes.io/ingress.class:  "nginx"  # opcional si usás ingressClassName abajo
spec:
  ingressClassName: gce                 # ← clave: lo procesa el controlador de GKE
  rules:
    - host: coordinador.tu-dominio.com  # ⚠️ reemplazar por tu dominio/host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coordinador-integrador
                port:
                  number: 80
