Infra/k8s/manifests/rabbitmq.yaml
# Service AMQP interno (sin LB/NEG)
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: integrador
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
---
# Service UI (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-ui
  namespace: integrador
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      port: 15672
      targetPort: 15672
---
# Ingress UI detrás de nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ui
  namespace: integrador
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-ui
                port:
                  number: 15672
