Infra/k8s/manifests/worker-pool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-pool
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-pool
  template:
    metadata:
      labels:
        app: worker-pool
    spec:
      containers:
        - name: worker-pool
          image: docker.io/facundootero/worker_pool:v15
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: worker-pool
  namespace: apps
spec:
  selector:
    app: worker-pool
  ports:
    - name: http
      port: 5002
      targetPort: 5002
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worker-pool
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /worker-pool(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: worker-pool
                port:
                  number: 5002
